# MediaPipe-MMN-Android

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/dev/gancheng/mediapipe/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  FaceDetector.cc  FaceDetector.h  FaceDetectorYN.cc  FaceDetectorYN.h  FaceLandmarkDetector.cc  FaceLandmarkDetector.h  FeatureDetector.cc  facemesh.cpp  logging.h  ndkcamera.cpp  ndkcamera.h  optional.h
app/src/main/java/dev/gancheng/mediapipe/: CameraActivity.java  Facemesh.java  MainActivity.java  VideoSurfaceView.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/dev/gancheng/mediapipe/: ExampleUnitTest.java
